--- a/style.css
+++ b/style.css
@@ -71,16 +71,14 @@
     background-color: rgb(255, 99, 71);
     color: white; 
     transition: transform .2s;
+    border-radius: 10px;
 }
-
-
-
-
 
 .box:hover{
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     background-color: rgb(255, 130, 107) ;
-    transform: scale(1.1)
+    transform: scale(1.05);
+    border-radius: 0px;
 }
 
 .title{
